src/app/app.css
/*
 * SPDX-License-Identifier: GPL-3.0
 * Copyright (c) 2024 LINBIT
 * Author: Liang Li <liang.li@linbit.com>
 */

@import url('antd/dist/reset.css');
@import 'tailwindcss';

iframe {
  min-height: 400px;
}

/* Ant Design Menu selected item styles */
.ant-menu-item-selected,
.ant-menu-item-selected:hover {
  background-color: white !important;
  color: #000000 !important;
}

.ant-menu-item-selected .ant-menu-item-icon,
.ant-menu-item-selected:hover .ant-menu-item-icon {
  color: #000000 !important;
}

.ant-menu-submenu-selected .ant-menu-submenu-title,
.ant-menu-submenu-selected:hover .ant-menu-submenu-title {
  background-color: white !important;
  color: #000000 !important;
}

